--- a/templates/emails/order_success.html.twig
+++ b/templates/emails/order_success.html.twig
@@ -1,9 +1,13 @@
-<h1>Bravo pour votre commande n°{{ order.id }}</h1>
-
-<p>Merci à vous,
+<h1>Bonjour
 	{{ user.firstname }}
 	{{ user.lastname }}
-	!</p>
+</h1>
+
+<p>Votre commande a bien été enregistrée avec le numéro de commande
+	{{ order.id }}
+	et nous sommes déjà entrain de la préparer. Nous vous informerons par e-mail dès qu'elle sera expédiée. 
+	
+		!</p>
 
 <table>
 	<thead>
