--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -479,3 +479,26 @@ thead {
   display: flex;
   align-items: center;
 }
+
+/*--------------------------------------------------------------
+  # animation homepage
+  --------------------------------------------------------------*/
+[class*="reveal"] {
+  opacity: 0;
+  transform: translateY(-30px);
+  transition: 0.5s;
+}
+
+.reveal-visible {
+  opacity: 1;
+  transform: translateY(0);
+  transition: 1s cubic-bezier(0.5, 0, 0, 1);
+}
+
+.reveal-2 {
+  transition-delay: 0.1s;
+}
+
+.reveal-3 {
+  transition-delay: 0.2s;
+}
