--- a/templates/shared/_footer.html.twig
+++ b/templates/shared/_footer.html.twig
@@ -46,21 +46,21 @@
 
 				<ul class="list-unstyled">
 					<li class="mb-2">
-						<a href="#!" class="text-dark">
+						<a href="{{ path('product_display') }}" class="text-dark">
 							<i class="fa-brands fa-forumbee pe-2"></i>
 							Boutique en ligne</a>
 					</li>
 					<li class="mb-2">
-						<a href="#!" class="text-dark">
+						<a href="{{ path('advise') }}" class="text-dark">
 							<i class="fa-brands fa-forumbee pe-2"></i>
 							Conseils d'utilisation</a>
 					</li>
 					<li class="mb-2">
-						<a href="#!" class="text-dark">
-							<i class="fa-brands fa-forumbee pe-2"></i>Mon histoire</a>
+						<a href="{{ path('home_cgv') }}" class="text-dark">
+							<i class="fa-brands fa-forumbee pe-2"></i>Conditions générales de ventes</a>
 					</li>
 					<li class="mb-2">
-						<a href="#!" class="text-dark">
+						<a href="{{ path('home_legal') }}" class="text-dark">
 							<i class="fa-brands fa-forumbee pe-2"></i>Mentions légales</a>
 					</li>
 				</ul>
@@ -73,11 +73,11 @@
 
 				<ul class="list-unstyled">
 					<li class="mb-2">
-						<a href="#!" class="text-dark">
+						<a href="{{ path('home_pdv') }}" class="text-dark">
 							<i class="fa-brands fa-forumbee pe-2"></i>Liste des points de ventes</a>
 					</li>
 					<li class="mb-2">
-						<a href="#!" class="text-dark">
+						<a href="{{ path('home_distributeur') }}'" class="text-dark">
 							<i class="fa-brands fa-forumbee pe-2"></i>Devenir distributeur</a>
 					</li>
 				</ul>
