--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 .separated-list {
@@ -31,11 +32,27 @@
 body {
   position: relative;
   height: 100%;
+  text-decoration: none;
+  list-style: none;
 }
+
+/*--------------------------------------------------------------
+# Navbar
+--------------------------------------------------------------*/
 
 .navbar {
   box-shadow: 0px 0px 10px 0.1rem rgba(0, 0, 0, 0.479);
 }
+
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+.footer a {
+  color: red;
+}
+/*--------------------------------------------------------------
+# Product page
+--------------------------------------------------------------*/
 
 .product-item {
   margin-bottom: 1.5em;
