--- a/templates/home/pdv.html.twig
+++ b/templates/home/pdv.html.twig
@@ -4,13 +4,28 @@
 {% block body %}
 	<h1>Points de vente</h1>
 	<p>Vous pouvez retrouver mes produits dans les points de vente suivants :</p>
+	<h2>
+		Pharmacies :</h2>
 	<ul>
-		<li>Magasin 1</li>
-		<li>Magasin 2</li>
-		<li>Magasin 3</li>
+		<li>Pharmacie des Haras - Herboristerie à Villeneuve sur Lot</li>
+		<li>Pharmacie du Marché - Miramont de Guyenne</li>
+		<li>Pharmacie de la Bastide - Monflanquin</li>
+	</ul>
+	<h2>
+		Herboristeries :</h2>
+	<ul>
+		<li>Herboristerie "La rue aux herbes" - Agen</li>
+		<li>Herboristerie "Menthe et Verveine" - Bergerac</li>
+	</ul>
+	<h2>
+		Magasins des producteurs et bio :</h2>
+	<ul>
+		<li>Magasin de producteurs "La petite ferme"  -  Villeneuve sur Lot</li>
+		<li>Magasin de producteurs "Pays'en direct"  - Villeréal</li>
+		<li>Magasin de producteurs "La halle fermière 47"  - Condezaygues</li>
+		<li>Magasin Bio "Les délices d'Emiles"  - Ste  Livrade sur Lot</li>
 	</ul>
 	<p>Si vous souhaitez devenir distributeur, rendez-vous sur la page
 		<a href="{{ path('home_distributeur') }}">Devenir distributeur</a>
 	</p>
 {% endblock %}
-{% block body %}{% endblock %}
