--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2,6 +2,57 @@ body {
   background-color: lightgray;
 }
 
+/* filters */
+.box {
+  padding: 10px;
+}
+
+#collapseSections,
+#collapseNavigation {
+  height: 300px;
+  margin-right: 0.3rem !important;
+  overflow-y: scroll;
+}
+
+#collapseSections::-webkit-scrollbar,
+#collapseNavigation::-webkit-scrollbar {
+  width: 6px;
+}
+
+#collapseSections::-webkit-scrollbar-thumb,
+#collapseNavigation::-webkit-scrollbar-thumb {
+  background-color: #333;
+  border-radius: 2px;
+}
+
+#collapseSections::-webkit-scrollbar-track,
+#collapseNavigation::-webkit-scrollbar-track {
+  background-color: #ddd;
+  border-radius: 2px;
+}
+
+.box-label {
+  color: #1d2939;
+  font-size: 0.9rem;
+  font-weight: 800;
+}
+
+.box-label .btn {
+  background-color: #fff;
+  padding: 0;
+}
+
+.box-label .btn:focus {
+  box-shadow: none;
+}
+
+.box-label .btn:active,
+.box-label .btn:hover {
+  color: #212529;
+  background-color: #fff;
+  border-color: transparent;
+}
+
 /*--------------------------------------------------------------
   # Testimonials
   --------------------------------------------------------------*/
