--- a/templates/home/cgv.html.twig
+++ b/templates/home/cgv.html.twig
@@ -1,4 +1,81 @@
 {% extends 'base.html.twig' %}
 {% block title %}Conditions générales de vente
 {% endblock %}
-{% block body %}{% endblock %}
+{% block body %}
+	<h1>
+		Préambule</h1>
+	<p>
+		Les présentes conditions générales de vente (CGV) s'appliquent à toutes les commandes passées sur le site internet [Nom du site] pour l'achat d'huiles essentielles. Le fait de passer commande implique l'acceptation sans réserve des présentes CGV.
+	</p>
+	<h2>
+		Article 1 - Objet</h2>
+	<p>
+		Les présentes conditions générales de vente ont pour objet de définir les droits et obligations des parties dans le cadre de la vente en ligne d'huiles essentielles proposées par [Nom du site] au consommateur.
+	</p>
+	<h2>
+		Article 2 - Produits
+	</h2>
+	<p>
+		Les caractéristiques principales des produits et notamment les spécifications, illustrations et indications de dimensions ou de capacité des produits, sont présentées sur le site [Nom du site]. Le client est tenu d'en prendre connaissance avant toute passation de commande. Le choix et l'achat d'un produit sont de la seule responsabilité du client.
+	</p>
+	<h2>
+		Article 3 - Prix
+	</h2>
+	<p>
+		Les prix des produits sont indiqués en euros toutes taxes comprises (TVA et autres taxes applicables au jour de la commande), sauf indication contraire et hors frais de traitement et d'expédition. Toutes les commandes, quelle que soit leur origine, sont payables en euros. [Nom de la société] se réserve le droit de modifier ses prix à tout moment, mais le produit sera facturé sur la base du tarif en vigueur au moment de la validation de la commande.
+	</p>
+	<h2>
+		Article 4 - Commande
+	</h2>
+	<p>
+		Le client peut passer commande sur le site [Nom du site]. La validation de la commande implique l'acceptation des présentes CGV, la reconnaissance d'en avoir parfaite connaissance et la renonciation à se prévaloir de ses propres conditions d'achat ou d'autres conditions.
+	</p>
+	<h2>
+		Article 5 - Paiement
+	</h2>
+	<p>
+		Le paiement est exigible immédiatement à la commande, y compris pour les produits en précommande. Le client peut effectuer le règlement par carte de paiement, PayPal ou tout autre moyen de paiement accepté par [Nom de la société].
+	</p>
+	<h2>
+		Article 6 - Livraison
+	</h2>
+	<p>
+		Les produits sont livrés à l'adresse de livraison indiquée au cours du processus de commande, dans le délai indiqué sur la page de validation de la commande. En cas de retard d'expédition, un mail sera adressé au client pour l'informer d'une éventuelle conséquence sur le délai de livraison indiqué. En cas de livraisons par un transporteur, [Nom de la société] ne peut être tenue pour responsable de retard de livraison dû exclusivement à une indisponibilité du client après plusieurs propositions de rendez-vous.
+	</p>
+	<h2>
+		Article 7 - Rétractation
+	</h2>
+	<p>
+		Conformément aux dispositions légales en vigueur, le client dispose d'un délai de 14 jours à compter de la réception du produit pour exercer son droit de rétractation sans avoir à justifier de motifs ni à payer de pénalité. Le client doit retourner le produit dans son état d'origine et complet (emballage, accessoires, notice). Les frais de retour sont à la charge du client.
+	</p>
+	<h2>
+		Article 8 - Garantie
+	</h2>
+	<p>
+		Tous les produits fournis par [Nom de la société] bénéficient de la garantie légale de conformité prévue par les articles L. 217-4 et suivants du Code de la consommation et de la garantie contre les vices cachés prévue par les articles 1641 et suivants du Code civil. En cas de non-conformité d'un produit vendu, il pourra être retourné, échangé ou remboursé.
+	</p>
+	<h2>
+		Article 9 - Responsabilité
+	</h2>
+	<p>
+		Les produits proposés sont conformes à la législation française en vigueur. La responsabilité de [Nom de la société] ne saurait être engagée en cas de non-respect de la législation du pays où le produit est livré. Il appartient au client de vérifier auprès des autorités locales les possibilités d'importation ou d'utilisation des produits ou services que vous envisagez de commander.
+	</p>
+	<h2>
+		Article 10 - Propriétés intellectuelles
+	</h2>
+	<p>
+		Tous les éléments du site [Nom du site] sont et restent la propriété intellectuelle et exclusive de [Nom de la société]. Nul n'est autorisé à reproduire, exploiter, rediffuser, ou utiliser à quelque titre que ce soit, même partiellement, des éléments du site qu'ils soient logiciels, visuels ou sonores.
+	</p>
+	<h2>
+		Article 11 - Données à caractère personnel
+	</h2>
+	<p>
+		[Nature et finalité de la collecte des données personnelles, droit d'accès, de rectification et d'opposition conformément à la loi informatique et libertés et au RGPD].
+	</p>
+	<h2>
+		Article 12 - Réglement des litiges
+	</h2>
+	<p>
+		Les présentes conditions de vente en ligne sont soumises à la loi française. En cas de litige, compétence est attribuée aux tribunaux compétents de [Ville], nonobstant pluralité de défendeurs ou appel en garantie.
+	</p>
+{% endblock %}
