--- a/templates/home/distributor.html.twig
+++ b/templates/home/distributor.html.twig
@@ -1,4 +1,51 @@
 {% extends 'base.html.twig' %}
 {% block title %}Devenir distributeur
 {% endblock %}
-{% block body %}{% endblock %}
+{% block body %}
+	<div class="home">
+		<div class="contact">
+			<div class="container text-center py-5">
+				<div class="row justify-content-center">
+					<div class="col-md-8">
+						<h1 class="mb-4">Devenir distributeur</h1>
+						{{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+						{{ form_errors(form) }}
+						<div class="row">
+							<div class="col-md-6 mb-3">
+								{{ form_row(form.companyname, {'attr': {'class': 'form-control mb-3', 'placeholder': 'Nom de votre entreprise'}}) }}
+							</div>
+							<div class="col-md-6 mb-3">
+								{{ form_row(form.companynumber, {'attr': {'class': 'form-control mb-3', 'placeholder': 'Numéro de SIRET'}}) }}
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6 mb-3">
+								{{ form_row(form.firstname, {'attr': {'class': 'form-control mb-3', 'placeholder': 'Prénom'}}) }}
+							</div>
+							<div class="col-md-6 mb-3">
+								{{ form_row(form.lastname, {'attr': {'class': 'form-control mb-3', 'placeholder': 'Nom'}}) }}
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6 mb-3">
+								{{ form_row(form.email, {'attr': {'class': 'form-control mb-3', 'placeholder': 'contact@beeHealth.fr'}}) }}
+							</div>
+							<div class="col-md-6 mb-3">
+								{{ form_row(form.phone, {'attr': {'class': 'form-control mb-3', 'placeholder': '01 02 03 04 05'}}) }}
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12 mb-3">
+								{{ form_row(form.content, {'attr': {'class': 'form-control', 'placeholder': 'Votre demande'}}) }}
+							</div>
+						</div>
+						<button class="btn btn-secondary mt-3" type="submit">
+							<span>Nous contacter</span>
+						</button>
+						{{ form_end(form) }}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+{% endblock %}
