--- a/templates/product/display.html.twig
+++ b/templates/product/display.html.twig
@@ -11,14 +11,18 @@
 			<div class="col-md-3">
 				{% include "partials/_filter.html.twig" %}
 			</div>
-			<div class="col-md-9 col-md-9 mt-5 mt-md-0">
-				<div class="d-flex w-100 mb-2 justify-content-end me-2 js-filter-sorting">
-					{% include "product/_sorting.html.twig" %}
-				</div>
-				<div class="col-md-12">
-					<div class="d-flex flex-wrap js-filter-content">
-						{% include "product/_products.html.twig" %}
+			<div class="col-md-9 mt-5 mt-md-0">
+				<div class="d-flex justify-content-between align-items-center mb-2">
+					<div class="fw-bold fs-4 text-primary">
+						{{ totalItems }}
+						Résultats
 					</div>
+					<div class="js-filter-sorting">
+						{% include "product/_sorting.html.twig" %}
+					</div>
+				</div>
+				<div class="d-flex flex-wrap js-filter-content">
+					{% include "product/_products.html.twig" %}
 				</div>
 				<div class="d-flex flex-row-reverse">
 					<div class="col-md-12 px-1 js-filter-pagination">
