--- a/templates/shared/_footer.html.twig
+++ b/templates/shared/_footer.html.twig
@@ -77,7 +77,7 @@
 							<i class="fa-brands fa-forumbee pe-2"></i>Liste des points de ventes</a>
 					</li>
 					<li class="mb-2">
-						<a href="{{ path('home_distributeur') }}'" class="text-dark">
+						<a href="{{ path('home_distributeur') }}" class="text-dark">
 							<i class="fa-brands fa-forumbee pe-2"></i>Devenir distributeur</a>
 					</li>
 				</ul>
