fix bug carousel

--- a/templates/product/category.html.twig
+++ b/templates/product/category.html.twig
@@ -13,7 +13,7 @@
 	<div class="row">
 		{% for p in category.products %}
 			<div class="col-lg-4 col-md-4">
-				{% include "partials/_product_card.html.twig" %}
+				{% include "_partials/_product_card.html.twig" %}
 			</div>
 		{% endfor %}
 	</div>
