--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,29 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8">
 		<title>
 			{% block title %}MarieShope
-
 			{% endblock %}
 		</title>
 		{% block stylesheets %}
 			<link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
-			<link href="{{asset('assets/css/style.css')}}" rel="stylesheet">
-			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-
-
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-
-		{% endblock %}
-		{% block javascripts %}
-			<script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
-			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
-			<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+			<link href="{{ asset('assets/css/style.css') }}" rel="stylesheet">
+			<link href="{{ asset('assets/css/carousel.css') }}" rel="stylesheet">
 		{% endblock %}
 	</head>
 	<body>
@@ -31,23 +17,24 @@
 			{% include "shared/_navbar.html.twig" %}
 		</header>
 
-		<main class="" role="main">
-			{% include "shared/_flash.html.twig"%}
-
+		<main role="main">
+			{% include "shared/_flash.html.twig" %}
+			{% set margin = '' %}
 			{% if carousel is defined %}
 				{% include "shared/_carousel.html.twig" %}
 			{% else %}
 				{% set margin = 'mt-5' %}
 			{% endif %}
-			<div class="container marketing {{margin ?? 0}}"> {% block body %}{% endblock %}
+			<div class="container marketing {{ margin }}"> {% block body %}{% endblock %}
 				</div>
-
-
 			</main>
-			<!-- FOOTER -->
 
 			{% include "shared/_footer.html.twig" %}
 
-
+			{% block javascripts %}
+				<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+				<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+				<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+			{% endblock %}
 		</body>
 	</html>
