--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -42,7 +42,7 @@
 	<div class="row">
 		{% for p in products %}
 			<div class="col">
-				{% include "partials/_product_card.html.twig" %}
+				{% include "_partials/_product_card.html.twig" %}
 			</div>
 		{% endfor %}
 	</div>
@@ -72,7 +72,7 @@
 					<span class="text-muted">Culture bio exclusivement.</span>
 				</h2>
 				<p class="lead">Culture bio de Menthe Poivrée, Lavande fine, Thym Thymol, Thym Thujanol, Hélichryse Italienne, Estragon et Camomille Romaine
-																					Les plantes ont été sélectionnées en fonction de leurs capacités d'adaptation à Bias, pour les vertus de leurs huiles essentielles,pour leurs  qualités mellifères et enfin et non le moindre pour le choix du cœur ! Ainsi , on commence en avril mai par la floraison du thym thujanol, puis vient le tour du thym thymol. On enchaine en juin par l'hélichrtyse italienne et la lavande. En juillet, on fait une première coupe  de menthe poivrée puis une deuxième en septembre.Une fois les sommités fleuries récoltées, elles sont acheminées chez un distillateur puis on récupère le distillat composé de l'huile essentielle et de l'hydrolat . Quel dommage qu'on ne puisse pas partager le parfume enivrant de nos huiles essentielles. En, revanche, je peux vous montrer  quelques photos des plantations pôur le plaisir des yeux</p>
+																										Les plantes ont été sélectionnées en fonction de leurs capacités d'adaptation à Bias, pour les vertus de leurs huiles essentielles,pour leurs  qualités mellifères et enfin et non le moindre pour le choix du cœur ! Ainsi , on commence en avril mai par la floraison du thym thujanol, puis vient le tour du thym thymol. On enchaine en juin par l'hélichrtyse italienne et la lavande. En juillet, on fait une première coupe  de menthe poivrée puis une deuxième en septembre.Une fois les sommités fleuries récoltées, elles sont acheminées chez un distillateur puis on récupère le distillat composé de l'huile essentielle et de l'hydrolat . Quel dommage qu'on ne puisse pas partager le parfume enivrant de nos huiles essentielles. En, revanche, je peux vous montrer  quelques photos des plantations pôur le plaisir des yeux</p>
 			</div>
 			<div class="col-md-5 order-md-1">
 				<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="assets/img/champs lavande.jpg" width="640" height="140" alt="Description de votre image">
@@ -87,7 +87,7 @@
 				<span class="text-muted">environ 25 ruches.</span>
 			</h2>
 			<p class="lead">En été, le nombre de ruches peut s'élever à 40  puisque nous produisons nos propres essaims en prélevant  des  cadres dans nos ruches les plus populeuses. En fonction de la météo et des floraisons, nous pratiquons la transhumance .  
-																																																																																																																																																																																																																																																																																																													En plus de notre production de miel, nous élaborons différentes gourmandises. nous mettons un point d'honneur à réaliser  nous même ces  produits de manière artisanale à partir de nos propres recettes.</p>
+																																																																																																																																																																																																																																																																																																																	En plus de notre production de miel, nous élaborons différentes gourmandises. nous mettons un point d'honneur à réaliser  nous même ces  produits de manière artisanale à partir de nos propres recettes.</p>
 		</div>
 		<div class="col-md-5 d-flex align-items-center">
 			<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="/assets/img/ruches.webp" width="640" height="140" alt="Description de votre image">
