--- a/templates/product/display.html.twig
+++ b/templates/product/display.html.twig
@@ -9,7 +9,7 @@
 	<div class="js-filter">
 		<div class="row">
 			<div class="col-md-3">
-				{% include "partials/_filter.html.twig" %}
+				{% include "_partials/_filter.html.twig" %}
 			</div>
 			<div class="col-md-9 mt-5 mt-md-0">
 				<div class="d-flex justify-content-between align-items-center mb-2">
