--- a/templates/shared/_carousel.html.twig
+++ b/templates/shared/_carousel.html.twig
@@ -1,35 +1,40 @@
-{% block stylesheets %}
-	<link href="{{asset('assets/css/carousel.css')}}" rel="stylesheet">
-{% endblock %}
-
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-	<ol class="carousel-indicators">
+<div id="myCarousel" class="carousel slide">
+	<div class="carousel-indicators">
 		{% for key, header in headers %}
-			<li data-target="#myCarousel" data-slide-to="{{key}}" class="{{key == 0 ? 'active' : ''}}"></li>
+			<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="{{ key }}" class="{{ key == 0 ? 'active' : '' }}" aria-current="{{ key == 0 ? 'true' : 'false' }}" aria-label="Slide {{ key + 1 }}"></button>
 		{% endfor %}
-	</ol>
+	</div>
 	<div class="carousel-inner">
 		{% for key, header in headers %}
-			<div class="carousel-item {{key == 0 ? 'active' : ''}}" style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(54, 54, 54, 0.4) 50%,  rgba(28, 28, 28, 0.3)),
-																									                url(images/bannieres/{{header.image}}) center center/ cover no-repeat;">
+			<div class="carousel-item {{ key == 0 ? 'active' : '' }}" style="background: linear-gradient(45deg, rgba(0, 0, 0, 0.8), rgba(54, 54, 54, 0.4) 50%, rgba(28, 28, 28, 0.3)), url(images/bannieres/{{ header.image }}) center center/cover no-repeat;">
 				<div class="container">
 					<div class="carousel-caption text-left">
-						<h2>{{header.title}}</h2>
-						<p>{{header.content}}</p>
+						<h2>{{ header.title }}</h2>
+						<p>{{ header.content }}</p>
 						<p>
-							<a class="btn btn-lg btn-dark shadow" href="{{header.btnUrl}}" role="button">{{header.btnTitle}}</a>
+							<button class="btn btn-lg btn-dark shadow" href="{{ header.btnUrl }}" onkeypress="" onkeydown="" onkeyup="">{{ header.btnTitle }}</button>
 						</p>
 					</div>
 				</div>
 			</div>
 		{% endfor %}
 	</div>
-	<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+	<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
 		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		<span class="sr-only">Previous</span>
-	</a>
-	<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+		<span class="visually-hidden">Previous</span>
+	</button>
+	<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
 		<span class="carousel-control-next-icon" aria-hidden="true"></span>
-		<span class="sr-only">Next</span>
-	</a>
+		<span class="visually-hidden">Next</span>
+	</button>
 </div>
+{% block javascripts %}
+	<script src=" {{ asset('assets/js/shop.js') }}" defer></script>
+	<script src="{{ asset('assets/js/bootstrap.bundle.min.js') }}"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+{% endblock %}
