--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -2,6 +2,7 @@
 
 {% block title %}Ma commande - MarieShop
 {% endblock %}
+
 {% block body %}
 	<h2>Je valide ma commande</h2>
 	<div class="row">
@@ -55,4 +56,17 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Ajouter le script JavaScript -->
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<script>
+		document.addEventListener('DOMContentLoaded', function () {
+var totalPrice = parseFloat('{{ totalPrice }}') / 100;
+
+
+if (totalPrice > 49) {
+Swal.fire({title: 'Bonne nouvelle !', text: 'Votre commande dépasse 49€, profitez de la livraison gratuite, elle sera mise automatiquement. Sélectionnez n\'importe quel transporteur', icon: 'success', confirmButtonText: 'Super'});
+}
+});
+	</script>
 {% endblock %}
