--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,11 @@
 		</title>
 		{% block stylesheets %}
 			<link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+			<script src="https://kit.fontawesome.com/50d220494b.js" crossorigin="anonymous"></script>
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+			<link href="Assets/fontawesome-free-6.4.2-desktop">
 			<link href="{{ asset('assets/css/style.css') }}" rel="stylesheet">
 			<link href="{{ asset('assets/css/carousel.css') }}" rel="stylesheet">
 		{% endblock %}
