--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,11 +10,7 @@
 			<link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 			<script src="https://kit.fontawesome.com/50d220494b.js" crossorigin="anonymous"></script>
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-			<link href="Assets/fontawesome-free-6.4.2-desktop">
 			<link href="{{ asset('assets/css/style.css') }}" rel="stylesheet">
-
 		{% endblock %}
 	</head>
 	<body>
@@ -38,8 +34,7 @@
 
 			{% block javascripts %}
 				<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-				<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-				<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.min.js"></script>
+				<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 			{% endblock %}
 		</body>
 	</html>
