--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,9 +7,10 @@
 			{% endblock %}
 		</title>
 		{% block stylesheets %}
-			<link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
+
+			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-			<script src="https://kit.fontawesome.com/50d220494b.js" crossorigin="anonymous"></script>
+
 			<link href="{{ asset('assets/css/style.css') }}" rel="stylesheet">
 		{% endblock %}
 	</head>
@@ -34,7 +35,9 @@
 
 			{% block javascripts %}
 				<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-				<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+				<script src="https://kit.fontawesome.com/50d220494b.js" crossorigin="anonymous"></script>
+
 			{% endblock %}
 		</body>
 	</html>
